[package]
name = "netsblox-vm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Devin Jean <emailcruzjean@yahoo.com>"]
repository = "https://github.com/dragazo/netsblox-vm"
documentation = "https://docs.rs/netsblox-vm"
description = "A crate for running NetsBlox code with optional native extensions."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "nb"
path = "src/main.rs"
required-features = ["cli"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[features]
default = ["all"]
all = ["std", "cli"]
std = [
    "no-std-compat/std",
    "tokio", "futures", "async-channel",
    "reqwest", "tokio-tungstenite",
    "rand_chacha", "getrandom",
    "names", "uuid",
]
cli = [
    "std",
    "actix-web", "actix-cors", "liquid",
    "clap", "serde", "crossterm",
]

[dependencies]

# core deps
no-std-compat = { version = "0.4.1", features = ["alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
# gc-arena = { version = "0.2.2", default-features = false }
gc-arena = { path = "../gc-arena/src/gc-arena", default-features = false }
netsblox-ast = { version = "=0.2.20", default-features = false }
num-traits = { version = "0.2.15", default-features = false }
num-derive = { version = "0.3.3", default-features = false }
bin-pool = { version = "0.1.0", default-features = false }
rand = { version = "0.8.5", default-features = false }
checked-float = { version = "0.1.1", default-features = false }
educe = { version = "0.4.20", default-features = false, features = ["Debug", "Clone", "Copy", "PartialOrd", "Ord", "PartialEq", "Eq", "Default"] }
libm = "0.2.2"

# std deps
tokio = { version = "1", features = ["full"], optional = true }
futures = { version = "0.3.23", optional = true }
async-channel = { version = "1.7.1", optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
tokio-tungstenite = { version = "0.17.2", features = ["native-tls"], optional = true }
names = { version = "0.14.0", default-features = false, optional = true }
uuid = { version = "1.1.2", features = ["v4", "fast-rng"], optional = true }
rand_chacha = { version = "0.3.1", optional = true }
getrandom = { version = "0.2.7", optional = true }

# cli deps
clap = { version = "3.2.14", features = ["derive"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
crossterm = { version = "0.24.0", optional = true }
actix-web = { version = "4.1.0", optional = true }
actix-cors = { version = "0.6.3", optional = true }
liquid = { version = "0.26.0", optional = true }
